[gd_scene load_steps=7 format=3 uid="uid://5b1erwkd0cri"]

[ext_resource type="Script" uid="uid://bd1t8mnxqc2w" path="res://kovalara_yerlestir/game_1.gd" id="1_fks45"]
[ext_resource type="PackedScene" uid="uid://c6ofs6nwsxs0x" path="res://kovalara_yerlestir/bucket.tscn" id="1_kgrps"]
[ext_resource type="PackedScene" uid="uid://neafyrt5gjco" path="res://kovalara_yerlestir/ball.tscn" id="2_7qfw5"]
[ext_resource type="Texture2D" uid="uid://cto4wgp3g8evb" path="res://kovalara_yerlestir/back.jpg" id="3_ov8li"]
[ext_resource type="AudioStream" uid="uid://d2yy4qkvp65lu" path="res://kovalara_yerlestir/correcto.mp3" id="5_t3b1j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_47jm1"]

[node name="Game1" type="Node2D"]
script = ExtResource("1_fks45")
ball_scene = ExtResource("2_7qfw5")
ball_position = Vector2(0, -546)

[node name="Back" type="Sprite2D" parent="."]
position = Vector2(20, -34)
scale = Vector2(1.6091363, 1.6091363)
texture = ExtResource("3_ov8li")

[node name="Bucket" parent="." instance=ExtResource("1_kgrps")]
position = Vector2(-348, 580)

[node name="Bucket2" parent="." instance=ExtResource("1_kgrps")]
position = Vector2(334, 599)
color = Color(1, 0, 0, 1)

[node name="Bucket3" parent="." instance=ExtResource("1_kgrps")]
position = Vector2(4, 531)
color = Color(0, 1, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Ball" parent="." instance=ExtResource("2_7qfw5")]
position = Vector2(0, -546)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_t3b1j")

[node name="Button" type="Button" parent="."]
offset_left = -534.0
offset_top = -958.0
offset_right = -250.0
offset_bottom = -872.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_47jm1")
text = "Geri DÃ¶n"

[connection signal="ball_entered" from="Bucket" to="." method="_on_bucket_ball_entered"]
[connection signal="ball_entered" from="Bucket2" to="." method="_on_bucket_2_ball_entered"]
[connection signal="ball_entered" from="Bucket3" to="." method="_on_bucket_3_ball_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
